@@ -18,6 +18,7 @@ Change log next version
 * java.util.Locale will never be serialized to JSON/XML when provided in as a parameter object
 * Fixed an issue with PUT method duplicating form parameters as query parameters (issue 137)
 * Fixed so that JSON path fragments starting with @ are escaped automatically (issue 138).
+* Fixed a serious bug in the response parsing which ignored changes made to the response from a filter when using the DSL (issue 139).
 
 Change log 1.4.5 (2011-11-08)
 -----------------------------
